# annotator

./: CMakeLists.txt  README.md  package.xml
config/: aviary.rviz
include/annotator/: bag_player.h
launch/: annotator_gui.launch  bag_player.launch  play_audio.launch
src/: annotator.py  annotator_gui.py  bag_player.cpp  bag_player_node.cpp
srv/: PlayerCmd.srv
